matroskademux: Fix off-by-one in validation of UTF-8

https://bugzilla.gnome.org/show_bug.cgi?id=707933